# 10SCAI

./: .gitignore  .gitmodules
Articles/03 NonlinearMonteCarlo&MachineLearning/article/arXiv-2008.13333v2/: review.bbl  review.tex
Articles/03 NonlinearMonteCarlo&MachineLearning/article/arXiv-2008.13333v2/Chinese version/: review.tex
Articles/03 NonlinearMonteCarlo&MachineLearning/presentation/: presentation.tex  temp.md
Articles/04 DeepBSDE/article/: translate.md
Articles/04 DeepBSDE/article/arXiv-1707.02568v3/: PDE_DL_arxiv.bbl  PDE_DL_arxiv.tex
Project/: .claudiaideconfig  Project.vcxproj.filters  geometry.h
Project/Project/x64/Debug/: Project.exe.recipe  Project.ilk
Project/Project/x64/Debug/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Project/Project/x64/Release/: Project.exe.recipe  Project.ipdb
Project/Project/x64/Release/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Project/x64/Debug/: Project.exp
Project/x64/Release/: Project.exp
cppRFM/implement/DeepBSDE/: CMakeLists.txt
cppRFM/implement/DeepBSDE/src/: CMakeLists.txt  allencahn.cpp  bsde_solver.cpp  bsde_solver.h  config.cpp  config.h  equation.h  hjblq.cpp  lr_scheduler_utils.h  main.cpp  mlp.cpp  mlp.h  non_shared_model.cpp  non_shared_model.h
cppRFM/implement/Project/source/: geometry.cpp  rfm.h  test.cpp
cppRFM/implement/graphics/source/: FuncPlot.cpp  FuncPlot.h  test.cpp
cppRFM/implement/helm 1d/source/: helm-1d.cpp  main.cpp  psi_b.cpp
cppRFM/visualize/src/: DArray.cpp  DArray.h  main.cpp  test.cpp  vplot.cpp  vplot.h
graphics/: graphics.vcxproj.filters
helm 1d/: helm 1d.vcxproj.filters  helm-1d.h  psi_a.cpp
helm 1d/helm 1d/x64/Debug/: helm 1d.exe.recipe
helm 1d/helm 1d/x64/Debug/helm 1d.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  helm 1d.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
helm 1d/helm 1d/x64/Release/: helm 1d.exe.recipe  helm 1d.ipdb
helm 1d/helm 1d/x64/Release/helm 1d.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  helm 1d.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
helm 1d/x64/Debug/: helm 1d.exp
helm 1d/x64/Release/: helm 1d.exp
